--- a/random.html
+++ b/random.html
@@ -1,27 +1,20 @@
-<head>
-    <meta charSet="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ric</title>
-    <link rel="icon" href="data:," />
-    <meta name="description" content="Ricardo's random links" />
-</head>
-<body>
-    <div>
-        <h1>Good reads/ideas</h1>
-        <ul>
-            <li><a href="https://users.ece.utexas.edu/~adnan/pike.html">Rob Pike's Rules of Programming</a></li>
-            <li><a href="https://www.youtube.com/watch?v=QM1iUe6IofM">Object-Oriented Programming is Bad - Brian
-                    Will</a></li>
-            <li><a href="https://www.youtube.com/watch?v=7Nj9ZjwOdFQ">Life as a developer - James Mickens</a></li>
-            <li><a href="https://www.youtube.com/watch?v=HubezKbFL7E">Database indexing - Kai Sassnowski</a></li>
-            <li><a href="https://www.youtube.com/watch?v=rX0ItVEVjHc">Data Oriented Desing and C++ - Mike Acton</a></li>
-            <li><a href="https://www.youtube.com/watch?v=wJ1L2nSIV1s">Stack vs Heap Memory in C++ - The Cherno</a></li>
-        </ul>
-        <h1>Useful links</h1>
-        <ul>
-            <li><a href="https://casual-effects.com/data/">McGuire Computer Graphics Archive</a></li>
-            <li><a href="https://glslsandbox.com/">GLSL Sandbox </a></li>
-            <li><a href="https://cppinsights.io/">Cpp Insights</a></li>
-        </ul>
-    </div>
-</body>
+<!DOCTYPE html>
+<link rel="icon" href="data:," />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>ric</title>
+<h1>Good reads/ideas</h1>
+<ul>
+    <li><a href="https://users.ece.utexas.edu/~adnan/pike.html">Rob Pike's Rules of Programming</a></li>
+    <li><a href="https://www.youtube.com/watch?v=QM1iUe6IofM">Object-Oriented Programming is Bad - Brian
+            Will</a></li>
+    <li><a href="https://www.youtube.com/watch?v=7Nj9ZjwOdFQ">Life as a developer - James Mickens</a></li>
+    <li><a href="https://www.youtube.com/watch?v=HubezKbFL7E">Database indexing - Kai Sassnowski</a></li>
+    <li><a href="https://www.youtube.com/watch?v=rX0ItVEVjHc">Data Oriented Desing and C++ - Mike Acton</a></li>
+    <li><a href="https://www.youtube.com/watch?v=wJ1L2nSIV1s">Stack vs Heap Memory in C++ - The Cherno</a></li>
+</ul>
+<h1>Useful links</h1>
+<ul>
+    <li><a href="https://casual-effects.com/data/">McGuire Computer Graphics Archive</a></li>
+    <li><a href="https://glslsandbox.com/">GLSL Sandbox </a></li>
+    <li><a href="https://cppinsights.io/">Cpp Insights</a></li>
+</ul>
