change to short yt links

--- a/random.html
+++ b/random.html
@@ -5,12 +5,12 @@
 <h1>Good reads/ideas</h1>
 <ul>
     <li><a href="https://users.ece.utexas.edu/~adnan/pike.html">Rob Pike's Rules of Programming</a></li>
-    <li><a href="https://www.youtube.com/watch?v=QM1iUe6IofM">Object-Oriented Programming is Bad - Brian
+    <li><a href="https://youtu.be/QM1iUe6IofM">Object-Oriented Programming is Bad - Brian
             Will</a></li>
-    <li><a href="https://www.youtube.com/watch?v=7Nj9ZjwOdFQ">Life as a developer - James Mickens</a></li>
-    <li><a href="https://www.youtube.com/watch?v=HubezKbFL7E">Database indexing - Kai Sassnowski</a></li>
-    <li><a href="https://www.youtube.com/watch?v=rX0ItVEVjHc">Data Oriented Desing and C++ - Mike Acton</a></li>
-    <li><a href="https://www.youtube.com/watch?v=wJ1L2nSIV1s">Stack vs Heap Memory in C++ - The Cherno</a></li>
+    <li><a href="https://youtu.be/7Nj9ZjwOdFQ">Life as a developer - James Mickens</a></li>
+    <li><a href="https://youtu.be/HubezKbFL7E">Database indexing - Kai Sassnowski</a></li>
+    <li><a href="https://youtu.be/rX0ItVEVjHc">Data Oriented Desing and C++ - Mike Acton</a></li>
+    <li><a href="https://youtu.be/wJ1L2nSIV1s">Stack vs Heap Memory in C++ - The Cherno</a></li>
 </ul>
 <h1>Useful links</h1>
 <ul>
