update with basic notes

--- a/index.html
+++ b/index.html
@@ -1,30 +1,12 @@
 <!DOCTYPE html>
 <link rel="icon" href="data:," />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="stylesheet" href="style.css">
 <title>ric</title>
-  <img src="./me.webp" alt="My profile pic" width="128" height="128" />
-  <h1>[ric]nuno</h1>
-  <p>
-    Software Engineer at <b>Critical Techworks(BMW)</b>
-<ul>
-  <li>
-    <a href="https://github.com/ricardonunosr">
-      GitHub
-    </a>
-  </li>
-  <li>
-    <a href="https://twitter.com/ricardonunosr">
-      Twitter
-    </a>
-  </li>
-  <li>
-    <a href="https://www.linkedin.com/in/ricardonunosr/">
-      LinkedIn
-    </a>
-  </li>
-  <li>
-    <a href="./cv.pdf">
-      CV
-    </a>
-  </li>
-</ul>
+<main>
+    <h1>[ric]nuno</h1>
+    <nav>
+        <a href="about.html">about</a>
+    </nav>
+    <footer>Site inpiration from <a href="https://tyhopp.com/">here</a></footer>
+</main>
