add quotes page

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <h1>[ric]nuno</h1>
     <nav>
         <a href="about.html">about</a>
+        <a href="quotes.html">quotes</a>
     </nav>
-    <footer>Site inpiration from <a href="https://tyhopp.com/">here</a></footer>
+    <footer>Site inspiration from <a href="https://tyhopp.com/">here</a></footer>
 </main>
