add first post and til notes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <nav>
         <a href="about.html">about</a>
         <a href="quotes.html">quotes</a>
+        <a href="til.html">til</a>
     </nav>
+    <div>
+        <a href="road-reflections-first-job.html">08-04-2023 - Road and reflections on first job</a>
+    </div>
     <footer>Site inspiration from <a href="https://tyhopp.com/">here</a></footer>
 </main>
