--- a/quotes.html
+++ b/quotes.html
@@ -14,4 +14,7 @@
     <blockquote>
         <p>&quot;An idiot admires complexity, a genius admires simplicity” - Terry A Davis</p>
     </blockquote>
+    <blockquote>
+		<p>&quot;There are only two hard things in Computer Science: cache invalidation and naming things.&quot; - Phil Karlton</p>
+	</blockquote>
 </main>
