include gists til

--- a/til.html
+++ b/til.html
@@ -14,5 +14,7 @@
     <pre><code class="lang-bash">CC=&#39;clang -ftime-trace&#39;
 CXX=&#39;clang++ -ftime-trace&#39;
 ClangBuildAnalyzer --all &lt;artifacts_folder&gt; &lt;capture_file&gt;</code></pre>
+    <p>Compiler Explorer: #include gists</p>
+    <pre>https://godbolt.org/z/dnPKndx3s</pre>
     <footer>Section inspiration from <a href="http://0x80.pl/til.html">here</a></footer>
 </main>
