--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <nav>
         <a href="about.html">about</a>
         <a href="quotes.html">quotes</a>
+        <a href="projects.html">projects</a>
         <a href="til.html">til</a>
     </nav>
     <div>
