talks that shaped my programming

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <a href="projects.html">projects</a>
         <a href="til.html">til</a>
     </nav>
-    <div>
+    <div id="posts">
         <a href="road-reflections-first-job.html">08-04-2023 - Road and reflections on first job</a>
+        <a href="talks-that-shaped-my-programming.html">24-08-2023 - Talks that shaped my programming</a>
     </div>
     <footer>Site inspiration from <a href="https://tyhopp.com/">here</a></footer>
 </main>
