--- a/talks-that-shaped-my-programming.html
+++ b/talks-that-shaped-my-programming.html
@@ -14,6 +14,7 @@
         <li><a href="https://youtu.be/QM1iUe6IofM">Brian Will: Why OOP is Bad</a></li>
         <li><a href="https://willcrichton.net/notes/systems-programming">What is Systems Programming, Really?</a>
         <li><a href="https://www.youtube.com/watch?v=443UNeGrFoM">Eskil Steenberg: How I program C</a>
+        <li><a href="https://www.youtube.com/watch?v=f84n5oFoZBc">Hammock Driven Development - Rich Hickey </a>
         </li>
         <ul>
             <li>In the beginning you always want Results.<br>In the end all you want is control.</li>
