--- a/talks-that-shaped-my-programming.html
+++ b/talks-that-shaped-my-programming.html
@@ -14,10 +14,17 @@
         <li><a href="https://youtu.be/QM1iUe6IofM">Brian Will: Why OOP is Bad</a></li>
         <li><a href="https://willcrichton.net/notes/systems-programming">What is Systems Programming, Really?</a>
         <li><a href="https://www.youtube.com/watch?v=443UNeGrFoM">Eskil Steenberg: How I program C</a>
-        <li><a href="https://www.youtube.com/watch?v=f84n5oFoZBc">Hammock Driven Development - Rich Hickey </a>
-        </li>
         <ul>
             <li>In the beginning you always want Results.<br>In the end all you want is control.</li>
         </ul>
+        <li><a href="https://www.youtube.com/watch?v=f84n5oFoZBc">Hammock Driven Development - Rich Hickey</a>
+        <li><a href="https://jeffandcaseyshow.com/jacs_0004_0016">Jeff and Casey's Guide to Becoming a Bigger Programmer</a>
+        <ul>
+            <li>Spend time in the debugger with disassembled code</li>
+            <li>Write the code with "some room to breathe". Write the code you will use.</li>
+            <li>Be more systematic when fixing bugs. e.g Keep track of the type of bugs</li>
+            <li>Being a better programmer means being good at tradeoffs, no code will be good enough.</li>
+        </ul>
+        </li>
     </ul>
 </main>
