--- a/talks-that-shaped-my-programming.html
+++ b/talks-that-shaped-my-programming.html
@@ -26,11 +26,17 @@
             <li>Be more systematic when fixing bugs. e.g Keep track of the type of bugs</li>
             <li>Being a better programmer means being good at tradeoffs, no code will be good enough.</li>
         </ul>
-        <li><a href="https://www.youtube.com/watch?v=3wyd6J3yjcs"> The Silver Bullet Syndrome by Hadi Hariri</a></li>
+        <li><a href="https://www.youtube.com/watch?v=3wyd6J3yjcs">The Silver Bullet Syndrome by Hadi Hariri</a></li>
         <ul>
-            <li>There is no silver bullets, no languages or frameworks. Use the ones which you are comfortable and have better tooling.
+            <li>There is no silver bullets, no languages or frameworks. Use the ones which you are comfortable and have
+                better tooling.
             </li>
         </ul>
+        <li><a href="https://www.youtube.com/watch?v=89bLKVvF85M">It's Not About the Technology - Mason Remaley -
+                Software You Can Love Vancouver 2023</a></li>
         </li>
+        <ul>
+            <li>Planning and minimalism is a balance.</li>
+        </ul>
     </ul>
 </main>
