--- a/index.html
+++ b/index.html
@@ -1,17 +1,81 @@
 <!DOCTYPE html>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" href="data:," />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <link rel="stylesheet" href="style.css">
-<title>ric</title>
-<main>
-    <h1>[ric]nuno</h1>
-    <nav>
-        <a href="about.html">about</a>
-        <a href="quotes.html">quotes</a>
-    </nav>
-    <div id="posts">
-        <a href="talks-that-shaped-my-programming.html">24-08-2023 - Talks that shaped my programming</a>
-        <a href="road-reflections-first-job.html">08-04-2023 - Road and reflections on first job</a>
+<title>Ricardo Nuno - About me</title>
+
+<div class="wrapper">
+  <div class="columns">
+    <div class="sidebar">
+      <header>Ricardo Nuno</header>
+      <div class="menu">
+        <div class="menu-item active">
+          <a href="index.html">About</a>
+        </div>
+        <div class="menu-item">
+          <a href="blog.html">Blog</a>
+        </div>
+        <!-- <div class="menu-item">
+            <a href="podcasts.html">Podcasts</a>
+          </div>
+          <div class="menu-item">
+            <a href="talks.html">Talks</a>
+          </div> -->
+        <div class="menu-item">
+          <a href="misc.html">Misc</a>
+        </div>
+        <div class="menu-item">
+          <a href="index.html#contact">Contact</a>
+        </div>
+      </div>
     </div>
-    <footer>Site inspiration from <a href="https://tyhopp.com/">here</a></footer>
-</main>
+
+    <div class="main">
+      <img class="avatar" src="./me.jpg" alt="Ricardo Nuno's profile picture" title="profile picture">
+      <p style="margin-top: 0; line-height: 1.2em;">
+        Hello! I'm Ricardo.
+      </p>
+
+      <p>
+        I work as a software engineer for <a href="https://www.criticaltechworks.com/">CriticalTechworks</a>. Mainly
+        developing code for autonomous driving features for <a href="https://www.bmw.com/en/index.html">BMW</a> cars.
+      </p>
+
+      <p>
+      </p>
+      <p>You can also find
+        me on <a href="https://github.com/ricardonunosr">GitHub</a>,
+        <a href="https://www.linkedin.com/in/ricardonunosr">LinkedIn</a> and <a href="./cv.pdf">CV</a>.
+      </p>
+      <p></p>
+
+      <div class="clearfix"></div>
+
+      <h2>What I enjoy</h2>
+
+      <p>
+        Deep diving into programming languages, interpreters, compilers, web servers, systems
+        programming, Unix, databases.
+      </p>
+
+      <p>
+        I'm a big fan of digging deep and peeling
+        away at abstraction layers to get a better sense of what I'm working with
+        and more leverage higher up. In short: I love learning new things.
+      </p>
+
+      <h2 id="contact">Contact</h2>
+      <div class="contact">
+        <p>Never hesitate to send me an email at <a href="mailto:me@ricardonunosr">me@ricardonunosr</a>. I
+          love
+          getting an email from you.</p>
+      </div>
+    </div>
+  </div>
+  <footer class="footer">
+    <p>
+      Site inspiration from <a href="https://thorstenball.com/">here</a>
+    </p>
+  </footer>
+</div>
