--- a/quotes.html
+++ b/quotes.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<link rel="icon" href="data:," />
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="icon" href="data:," />
 <link rel="stylesheet" href="style.css">
-<title>ric</title>
+<title>Ricardo Nuno -Quotes</title>
+
 <main>
     <h1 id="quotes">Quotes</h1>
     <blockquote>
