--- a/road-reflections-first-job.html
+++ b/road-reflections-first-job.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<link rel="icon" href="data:," />
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="icon" href="data:," />
 <link rel="stylesheet" href="style.css">
-<title>ric</title>
+<title>Ricardo Nuno - Road and reflections on first job</title>
+
 <main>
     <h1 id="road-and-reflections-on-first-job">Road and reflections on first job</h1>
     <p>Just wanna share my thought process or maybe its more documenting for myself to see where I was at when I first
