--- a/talks-that-shaped-my-programming.html
+++ b/talks-that-shaped-my-programming.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<link rel="icon" href="data:," />
+<meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<link rel="icon" href="data:," />
 <link rel="stylesheet" href="style.css">
-<title>ric</title>
+<title>Ricardo Nuno - Talks that shaped my programming</title>
+
 <main>
     <h1 id="talks-that-shaped-my-programming">Talks that shaped my programming</h1>
     <ul>
